--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
             <form class="modal-form">
               <div class="modal-field">
-                <div class="input-wrap"><label class="input-label"> <span>Ім'я</span> <input type="text"
-                      name="user-name" class="modal-input" required></label>
+                <div class="input-wrap"><label for="user-name" class="input-label"> <span class="label-text-modal">Ім'я</span></label> <input type="text"
+                      name="user-name" id="user-name" class="modal-input" required>
                   <svg class="modal-input-icon" width="18" height="18">
                     <use href="./images/icons/symbol-defs-clients.svg#icon-person-icon"></use>
                   </svg>
@@ -76,8 +76,8 @@
               </div>
 
               <div class="modal-field">
-                <div class="input-wrap"><label class="input-label"> <span>Телефон</span> <input type="tel"
-                      name="user-tel" class="modal-input" required></label>
+                <div class="input-wrap"><label for="user-tel" class="input-label"> <span class="label-text-modal">Телефон</span></label> <input type="tel"
+                      name="user-tel" id="user-tel" class="modal-input" required>
                   <svg class="modal-input-icon" width="18" height="18">
                     <use href="./images/icons/symbol-defs-clients.svg#icon-phone-icon"></use>
                   </svg>
@@ -85,16 +85,16 @@
               </div>
 
               <div class="modal-field">
-                <div class="input-wrap"><label class="input-label"> <span>Пошта</span> <input type="email"
-                      name="user-mail" class="modal-input" required></label>
+                <div class="input-wrap"><label for="user-mail" class="input-label"> <span class="label-text-modal">Пошта</span></label> <input type="email"
+                      name="user-mail" id="user-mail" class="modal-input" required>
                   <svg class="modal-input-icon" width="18" height="18">
                     <use href="./images/icons/symbol-defs-clients.svg#icon-email-icon"></use>
                   </svg>
                 </div>
               </div>
               <div class="modal-field">
-                <label class="input-label">
-                  <textarea name="user-comment" class="modal-text" placeholder="Введіть текст"></textarea>
+                <label for="user-comment" class="input-label"> <span class="label-text-modal">Коментар</span>
+                  <textarea name="user-comment" id="user-comment" class="modal-text" placeholder="Введіть текст"></textarea>
                 </label>
               </div>
 
