--- a/index.html
+++ b/index.html
@@ -73,109 +73,7 @@
           <button data-modal-open type="button" class="button">
             Замовити послугу</button
           >\
-          <div class="backdrop is-hidden" data-modal>
-            <div class="modal">
-              <button type="button" data-modal-close class="close-button">
-                <svg class="close-button-cross" width="11" height="11">
-                  <use href="./images/icons/symbol-defs.svg#icon-close"></use>
-                </svg>
-              </button>
-              <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
-              <form class="modal-form">
-                <div class="modal-field">
-                  <label for="user-name" class="input-label">
-                    <span class="label-text-modal">Ім'я</span></label
-                  >
-                  <div class="input-wrap">
-                    <input
-                      type="text"
-                      name="user-name"
-                      id="user-name"
-                      class="modal-input"
-                      required
-                    />
-                    <svg class="modal-input-icon" width="18" height="18">
-                      <use
-                        href="./images/icons/symbol-defs-clients.svg#icon-person-icon"
-                      ></use>
-                    </svg>
-                  </div>
-                </div>
-
-                <div class="modal-field">
-                  <label for="user-tel" class="input-label">
-                    <span class="label-text-modal">Телефон</span></label
-                  >
-                  <div class="input-wrap">
-                    <input
-                      type="tel"
-                      name="user-tel"
-                      id="user-tel"
-                      class="modal-input"
-                      required
-                    />
-                    <svg class="modal-input-icon" width="18" height="18">
-                      <use
-                        href="./images/icons/symbol-defs-clients.svg#icon-phone-icon"
-                      ></use>
-                    </svg>
-                  </div>
-                </div>
-
-                <div class="modal-field">
-                  <label for="user-mail" class="input-label">
-                    <span class="label-text-modal">Пошта</span></label
-                  >
-                  <div class="input-wrap">
-                    <input
-                      type="email"
-                      name="user-mail"
-                      id="user-mail"
-                      class="modal-input"
-                      required
-                    />
-                    <svg class="modal-input-icon" width="18" height="18">
-                      <use
-                        href="./images/icons/symbol-defs-clients.svg#icon-email-icon"
-                      ></use>
-                    </svg>
-                  </div>
-                </div>
-                <div class="modal-field">
-                  <label for="user-comment" class="input-label">
-                    <span class="label-text-modal">Коментар</span>
-                    <textarea
-                      name="user-comment"
-                      id="user-comment"
-                      class="modal-text"
-                      placeholder="Введіть текст"
-                    ></textarea>
-                  </label>
-                </div>
-                <div class="modal-field">
-                  <input
-                    type="checkbox"
-                    name="agreement"
-                    id="agreement"
-                    class="input-chek"
-                  />
-                  <label for="agreement" class="checkbox-text"
-                    ><span>
-                      <svg class="chek-icon" width="16" height="15">
-                        <use
-                          href="./images/icons/symbol-defs-clients.svg#icon-check"
-                        ></use>
-                      </svg></span>Погоджуюся з розсилкою та приймаю
-                    <a href="#" class="modal-link">Умови договору</a>
-                  </label>
-                </div>
-
-                <div class="modal-field">
-                  <button type="submit" class="modal-button">Відправити</button>
-                </div>
-              </form>
-            </div>
-          </div>
+          
         </div>
       </section>
 
@@ -710,6 +608,109 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+              <button type="button" data-modal-close class="close-button">
+                <svg class="close-button-cross" width="11" height="11">
+                  <use href="./images/icons/symbol-defs.svg#icon-close"></use>
+                </svg>
+              </button>
+              <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+              <form class="modal-form">
+                <div class="modal-field">
+                  <label for="user-name" class="input-label">
+                    <span class="label-text-modal">Ім'я</span></label
+                  >
+                  <div class="input-wrap">
+                    <input
+                      type="text"
+                      name="user-name"
+                      id="user-name"
+                      class="modal-input"
+                      required
+                    />
+                    <svg class="modal-input-icon" width="18" height="18">
+                      <use
+                        href="./images/icons/symbol-defs-clients.svg#icon-person-icon"
+                      ></use>
+                    </svg>
+                  </div>
+                </div>
+
+                <div class="modal-field">
+                  <label for="user-tel" class="input-label">
+                    <span class="label-text-modal">Телефон</span></label
+                  >
+                  <div class="input-wrap">
+                    <input
+                      type="tel"
+                      name="user-tel"
+                      id="user-tel"
+                      class="modal-input"
+                      required
+                    />
+                    <svg class="modal-input-icon" width="18" height="18">
+                      <use
+                        href="./images/icons/symbol-defs-clients.svg#icon-phone-icon"
+                      ></use>
+                    </svg>
+                  </div>
+                </div>
+
+                <div class="modal-field">
+                  <label for="user-mail" class="input-label">
+                    <span class="label-text-modal">Пошта</span></label
+                  >
+                  <div class="input-wrap">
+                    <input
+                      type="email"
+                      name="user-mail"
+                      id="user-mail"
+                      class="modal-input"
+                      required
+                    />
+                    <svg class="modal-input-icon" width="18" height="18">
+                      <use
+                        href="./images/icons/symbol-defs-clients.svg#icon-email-icon"
+                      ></use>
+                    </svg>
+                  </div>
+                </div>
+                <div class="modal-field">
+                  <label for="user-comment" class="input-label">
+                    <span class="label-text-modal">Коментар</span>
+                    <textarea
+                      name="user-comment"
+                      id="user-comment"
+                      class="modal-text"
+                      placeholder="Введіть текст"
+                    ></textarea>
+                  </label>
+                </div>
+                <div class="modal-field checkbox-container">
+                  <input
+                    type="checkbox"
+                    name="agreement"
+                    id="agreement"
+                    class="input-chek visually-hidden"
+                  />
+                  <label for="agreement" class="checkbox-text"
+                    ><span>
+                      <svg class="chek-icon" width="16" height="15">
+                        <use
+                          href="./images/icons/symbol-defs-clients.svg#icon-check"
+                        ></use>
+                      </svg></span>Погоджуюся з розсилкою та приймаю
+                    <a href="#" class="modal-link">Умови договору</a>
+                  </label>
+                </div>
+
+                <div class="modal-field modal-button-field">
+                  <button type="submit" class="modal-button">Відправити</button>
+                </div>
+              </form>
+            </div>
+          </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
