--- a/portfolio.html
+++ b/portfolio.html
@@ -398,6 +398,25 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-container">
+          <h3 class="footer-soclist-title">підпишіться на розсилку</h3>
+          <form class="footer-subscribe-form">
+            <input
+              type="email"
+              name="subscribe-form"
+              placeholder="E-mail"
+              class="subscribe-form"
+            />
+            <button type="submit" class="button subscribe-button">
+              Підписатися
+              <svg class="subscribe-icon" width="24" height="24">
+                <use
+                  href="./images/icons/symbol-defs-clients.svg#icon-icon-send"
+                ></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
