--- a/index.html
+++ b/index.html
@@ -694,18 +694,17 @@
               </svg>
             </div>
           </div>
-          <div class="modal-field">
-            <label for="user-comment" class="input-label">
-              <span class="label-text-modal">Коментар</span>
+          <div class="modal-field text-area-field">
+            <label for="user-comment" class="input-label"><span class="label-text-modal">Коментар</span></label>
+              
               <textarea
                 name="user-comment"
                 id="user-comment"
                 class="modal-text"
-                placeholder="Введіть текст"
-              ></textarea>
-            </label>
+                placeholder="Введіть текст"></textarea>
+            
           </div>
-          <div class="modal-field checkbox-container">
+          <div class="checkbox-container">
             <input
               type="checkbox"
               name="agreement"
@@ -723,7 +722,7 @@
             </label>
           </div>
 
-          <div class="modal-field modal-button-field">
+          <div class="modal-button-field">
             <button type="submit" class="modal-button">Відправити</button>
           </div>
         </form>
